kubernetes/networking/traefik-dashboard-ingress.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  namespace: traefik
  name: dashboard-auth
spec:
  basicAuth:
    secret: dashboard-users-htaccess
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  namespace: traefik
  name: traefik-dashboard-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`traefik.demos.dynatrace.martinnirtl.com`)
      kind: Rule
      services:
        - name: api@internal
          kind: TraefikService
      middlewares:
        - name: dashboard-auth
  tls:
    certResolver: cert-resolver
